--- a/src/BlBundle/Resources/views/Vues/factconsult.html.twig
+++ b/src/BlBundle/Resources/views/Vues/factconsult.html.twig
@@ -26,7 +26,7 @@
                     <th scope="row">{{ facts.id }}</th>
                     <td>{{ facts.reference }}</td>
                     <td>{{ facts.designation }}</td>
-                    <td>{{ facts.quantite }}</td>
+                    <td>{{ facts.quantite1 }}</td>
                     <td>{{ facts.totalHt }}</td>
                     <td>{{ facts.totalTtc }}</td>
                 </tr>
