--- a/src/BlBundle/Resources/views/Vues/factpreview.html.twig
+++ b/src/BlBundle/Resources/views/Vues/factpreview.html.twig
@@ -50,7 +50,7 @@
                         <td>{{ fact.designation }}</td>
                         <td>{{ fact.quantite }}</td>
                         <td>{{ fact.puHt }}</td>
-                        <td>{{ fact.montantHt }}</td>
+                        <td>{{ fact.puHt * fact.quantite}}</td>
                         <td>{{ fact.totalHt }}</td>
                     </tr>
                 </tbody>
